--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -26,14 +26,14 @@ body {
 }
 
 .form-group {
-    width: 60%;
+    width: 70%;
     display: flex;
     flex-direction: column;
     margin: auto;
 }
 
 .form-group>.buttons>button {
-    font-size: 20px;
+    font-size: medium;
     color: #424242;
     border: 2px dotted #424242;
     background-color: #48CFCB;
@@ -44,6 +44,12 @@ body {
     width: fit-content;
     padding: 5px;
     padding-inline: 10px;
+
+}
+
+button:hover {
+    background-color:#48CFCB;
+    color: red;
 }
 
 .buttons {
@@ -113,7 +119,7 @@ span:hover {
 }
 
 .disclaimer {
-    font-size: 20px;
+    font-size: medium;
     color: #424242;
     border: 2px dotted #424242;
     height: 40px;
@@ -267,7 +273,7 @@ h3>.lien {
         transform: scale(1);
     }
     50% {
-        transform: scale(1.7);
+        transform: scale(1.5);
     }
     100% {
         transform: scale(1);
