--- a/templates/errorPage.html
+++ b/templates/errorPage.html
@@ -10,6 +10,7 @@
   <main>
     <div class="error">
       {{if eq . 400 }} <h1>Bad Request 400 </h1> 
+      {{else if eq . 403}} <h1>Access Forbidden 403</h1>
       {{else if eq . 404}} <h1>Not Found 404</h1>
       {{else if eq . 405}} <h1>Method Not allowed 405</h1>
       {{else if eq . 500}} <h1>Internal Server Error 500</h1>
